--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,3 +77,21 @@
   background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.color-picker-container {
+  background: linear-gradient(to right, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+}
+
+input[type="color"] {
+  -webkit-appearance: none;
+  border: none;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 0.375rem;
+}
